# audio-waveform-visualizer

./: .gitignore  README.md  pyproject.toml
examples/: sample_usage.sh
src/visualizer/: audio.py  cli.py  cli_index.py  encode.py  palettes.json  palettes.py  pipeline.py  render.py  tracklist.py
src/visualizer/fingerprint/: __init__.py  extract.py  index.py  match.py  metadata.py
src/visualizer/styles/: __init__.py  bars.py  particles.py  radial.py  waveform.py
src/visualizer/ui/: jobs.py  launcher.py  server.py
src/visualizer/ui/static/: app.js  index.html  styles.css
tools/: gen_previews.py
