[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-waveform-visualizer"
version = "0.1.0"
description = "Local CLI that renders Monstercat-style visualizer videos for DJ mixes."
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10.2",
    "numpy>=1.26",
    "Pillow>=10.2",
    "scipy>=1.11",
    "soundfile>=0.12",
    "tqdm>=4.66",
    "mutagen>=1.47",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
]

[project.scripts]
visualize = "visualizer.cli:main"
fingerprint-index = "visualizer.cli_index:main"
visualizer-ui = "visualizer.ui.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
visualizer = [
    "palettes.json",
    "ui/static/*",
    "ui/static/previews/*",
]
